--- a/app/templates/support_ticket.html
+++ b/app/templates/support_ticket.html
@@ -201,6 +201,12 @@
   word-break:break-word;
 }
 
+@media (max-width: 768px){
+  .container {
+    margin-top: 90px !important;
+  }
+}
+
 
 </style>
 
